--- a/_posts/2018-11-2-Hello 2018.markdown
+++ b/_posts/2018-11-2-Hello 2018.markdown
@@ -5,7 +5,8 @@ subtitle:   " \"Hello Blog\""
 author:     "Icebamboo"
 header-img: "img/about-bg.jpg"
 tags:
-    - 打招呼
+    - 打招呼 
+    - Hello World
 ---
 
 > “Yeah It's on. 很高兴你在看我。”
