--- a/_posts/2018-11-02-hello-2018.md
+++ b/_posts/2018-11-02-hello-2018.md
@@ -1,8 +1,8 @@
 ---
-layout: post
-title: Welcome to Icebamboo Blog
-subtitle: ' "Hello Blog"'
-author: Icebamboo
+layout:     post
+title:      Welcome to Icebamboo Blog
+subtitle:   "Hello Blog"
+author:     Icebamboo
 header-img: img/about-bg.jpg
 tags:
     - 打招呼 
