--- a/_posts/2018-11-02-hello-2018.md
+++ b/_posts/2018-11-02-hello-2018.md
@@ -1,4 +1,5 @@
 ---
+published: false
 layout: post
 title: Welcome to Icebamboo Blog
 subtitle: Hello Blog
@@ -6,9 +7,7 @@ author: Icebamboo
 header-img: img/about-bg.jpg
 tags:
   - 打招呼
-published: true
 ---
-
 > “Yeah It's on. 很高兴你在看我。”
 
 
