--- a/_drafts/2018-11-02-hello-2018.md
+++ b/_drafts/2018-11-02-hello-2018.md
@@ -11,6 +11,6 @@ tags:
 > “教我们PPT是为了让我们写简历吗？”
 
 
-## 只是个作业啊
+## 只是个作业
 
-我做成了[视频](https://candycat1992.github.io/)
+我做成了[视频](https://icebamboo97.github.io/video/ppt.wmv)
