Revert "Create 2018-11-02-hello-2018.md"
This reverts commit d62295015bbb85a7d43d5e32723ca42823529e32.

--- a/_drafts/2018-11-02-hello-2018.md
+++ b/_drafts/2018-11-02-hello-2018.md
@@ -11,6 +11,6 @@ tags:
 > “教我们PPT是为了让我们写简历吗？”
 
 
-## 只是个作业
+## 只是个作业啊
 
-我做成了[视频](https://icebamboo97.github.io/video/ppt.wmv)
+我做成了[视频](https://candycat1992.github.io/)
