--- a/_posts/2018-11-02-ppt.md
+++ b/_posts/2018-11-02-ppt.md
@@ -4,7 +4,7 @@ layout: post
 title: 一个讲指针的PPT
 subtitle: '"Pointer in C"'
 author: Icebamboo
-header-img: img/about-bg.jpg
+header-img: img/post-bg.jpg
 tags:
   - 杂货
 ---
@@ -14,6 +14,6 @@ tags:
 ## 只是个作业
 
 我做成了[视频](https://icebamboo97.github.io/video/ppt.wmv)
-<video id="video" controls="" preload="none" poster="http://om2bks7xs.bkt.clouddn.com/2017-08-26-Markdown-Advance-Video.jpg">
-<source id="mp4" src="https://icebamboo97.github.io/video/ppt.wmv" type="video/mp4">
+<video id="video" controls="" preload="none" poster="">
+<source id="mp4" src="https://icebamboo97.github.io/video/ppt.wmv" type="video/wmv">
 </video>
