--- a/_posts/2018-11-02-ppt.md
+++ b/_posts/2018-11-02-ppt.md
@@ -14,6 +14,6 @@ tags:
 ## 只是个作业
 
 我做成了[视频](https://icebamboo97.github.io/video/ppt.wmv)
-<video id="video" controls="" preload="none" poster="">
+<video id="video" controls="" preload="none" poster="none">
 <source id="mp4" src="https://icebamboo97.github.io/video/ppt.wmv" type="video/wmv">
 </video>
