--- a/_posts/2018-11-02-ppt.md
+++ b/_posts/2018-11-02-ppt.md
@@ -15,5 +15,5 @@ tags:
 
 我做成了[视频](https://icebamboo97.github.io/video/ppt.wmv)
 <video id="video" controls="" preload="none" poster="none">
-<source id="mp4" src="https://icebamboo97.github.io/video/ppt.wmv" type="video/wmv">
+<source id="wmv" src="https://icebamboo97.github.io/video/ppt.wmv" type="video/wmv">
 </video>
